style: fix overflow nature of know-my-napier container

--- a/styles.css
+++ b/styles.css
@@ -322,6 +322,30 @@ body {
 	background-color: #555;
 }
 
+.know-my-napier-content-container {
+  overflow: auto;
+}
+
+.know-my-napier-content-container::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.know-my-napier-content-container::-webkit-scrollbar
+{
+	width: 4px;
+	background-color: #F5F5F5;
+}
+
+.know-my-napier-content-container::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(241, 241, 241, 0.1);
+	background-color: #555;
+}
+
 footer {
   background-color: #eeeeee;
   color: #878681;
